--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -7,7 +7,7 @@ cloudbees-slack-integration:
       jenkins: "dchelm"
       optedIn: true
       scmId: "dchelm"
-      slack: "REPLACE_USER_EMAIL"
+      slack: "dennis.helm@sailpoint.com"
       slackWorkspace: "T010A455W77"
 cloudbees-pipeline-policies:
   config:
