--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -7,7 +7,7 @@ cloudbees-slack-integration:
       jenkins: "dchelm"
       optedIn: true
       scmId: "dchelm"
-      slack: "dennis.helm@sailpoint.com"
+      slack: "dns.helm@gmail.com"
       slackWorkspace: "T010A455W77"
 cloudbees-pipeline-policies:
   config:
