--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -10,7 +10,7 @@ cloudbees-slack-integration:
       jenkins: "dchelm"
       optedIn: true
       scmId: "dchelm"
-      slack: "REPLACE_USER_EMAIL"
+      slack: "dns.helm@gmail.com"
       slackWorkspace: "T010A455W77"
 cloudbees-pipeline-policies:
   config:
